src/test/deca/context/valid/oracle/field_uninitialized.deca
class A {
    int a;
    int method(){
        return this.a;
    }

    int method2(){
        return a;
    }
}