src/test/deca/context/invalid/oracle/same_name_param_var.deca
class A{
    int method(int a){
        int a;
        return a;
    }
}